progress and I downloaded my resume in a pdf

--- a/resume.tex
+++ b/resume.tex
@@ -59,7 +59,7 @@
 \mobile{(+212) 716110954}
 \email{amineelhaouat@outlook.com}
 \github{PhantomVisible}
-\linkedin{https://www.linkedin.com/in/amine-el-haouat/}
+\linkedin{amine-el-haouat}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -83,7 +83,7 @@
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
 \makecvfooter
-  {\today}
+  {}
   {El Haouat Amine~~~·~~~Résumé}
   {\thepage}
 
@@ -94,11 +94,11 @@
 %-------------------------------------------------------------------------------
 \input{resume/summary.tex}
 \input{resume/experience.tex}
+\input{resume/education.tex}
 \input{resume/certification.tex}
-%\input{resume/presentation.tex}
+\input{resume/languages.tex}
 %\input{resume/writing.tex}
 %\input{resume/committees.tex}
-\input{resume/education.tex}
 %\input{resume/extracurricular.tex}
 
 
