--- a/resume/certification.tex
+++ b/resume/certification.tex
@@ -1,14 +1,12 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Certification \& Awards}
-
+\cvsection{Certification}
 
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsubsection{On site}
-
+%\cvsubsection{On site}
 
 %-------------------------------------------------------------------------------
 %	CONTENT
@@ -17,14 +15,14 @@
 
 %---------------------------------------------------------
     \cvhonor
-    {Full Stack Angular/Java} % Certification
-    {JobInTech} % Issuer
+    {Full Stack Angular Java} % Award
+    {JobInTech} % Event
     {Fez} % Location
     {2026} % Date(s)
 
 %---------------------------------------------------------
     \cvhonor
-    {JAVA Module & Spring Module} % Certification
+    {JAVA Module \& Spring Module} % Certification
     {ArkX academy} % Issuer
     {Fez} % Platform
     {2025} % Date(s)
@@ -37,14 +35,13 @@
 
 %---------------------------------------------------------
     \cvhonor
-    {Angular & Typescript} % Award
+    {Angular \& Typescript} % Award
     {ArkX academy} % Event
     {Fez} % Location
+    {2025} % Date(s)
 
 %---------------------------------------------------------
 \end{cvhonors}
-
-
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
