--- a/resume/education.tex
+++ b/resume/education.tex
@@ -17,7 +17,7 @@
     {Sep. 2020 - Jun. 2024} % Date(s)
     {
         \begin{cvitems} % Description(s) bullet points
-            \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+            \item {Bachelor’s degree in Computer Science and Technology from DPU, with a strong foundation in programming, algorithms, and digital systems.}
         \end{cvitems}
     }
 
