--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -20,10 +20,11 @@
             \item {Handled individual consumer complaints related to FTTH (fiber-to-the-home) access services}
             \item {Monitored and followed up on incidents, including escalations, consolidation, and trend analysis}
             \item {Coordinated a team of field technicians and implemented operational procedures}
-            \item {Tools & Skills: Salesforce CRM, QGIS, ServiceNow, NGE, AMS.}
+            \item {Tools \& Skills: Salesforce CRM, QGIS, ServiceNow, NGE, AMS.}
         \end{cvitems}
     }
 
+    \vspace{1em}
 %---------------------------------------------------------
     \cventry
     {Retention Agent} % Job title
@@ -34,10 +35,11 @@
         \begin{cvitems} % Description(s) of tasks/responsibilities
             \item {Managed customer retention and service requests for mobile, television, Internet, and residential telephony services (Bell Aliant)}
             \item {Used strong communication and negotiation skills to retain customers requesting subscription cancellation}
-            \item {Tools & Skills: CRM systems, Fluent in French and English, Strong customer-oriented and managerial mindset}
+            \item {Tools \& Skills: CRM systems, Fluent in French and English, Strong customer-oriented and managerial mindset}
         \end{cvitems}
     }
 
+    \vspace{1em}
 %---------------------------------------------------------
     \cventry
     {Customer Service Representative (Inbound Calls)} % Job title
@@ -49,7 +51,7 @@
             \item {Ensured customer retention through high-quality service and effective issue resolution}
             \item {Handled inbound calls and logged incidents of various types in CRM systems}
             \item {Applied basic tourism and travel knowledge to support hotel reservation inquiries}
-            \item {Tools & Skills: CRM systems, Fluent in French and English, Strong customer-focused and managerial mindset}
+            \item {Tools \& Skills: CRM systems, Fluent in French and English, Strong customer-focused and managerial mindset}
         \end{cvitems}
     }
 
